Restore IT tests in -P precommit profile